- Fixed: Alignment of the navigator toolbox when collapsed mode - Fixed: Margin to display correctly the overflow indicators

--- a/Neo Zen V1.0.0/NeoZen/Theme/Tabs/Tabs-OverflowIndicators.css
+++ b/Neo Zen V1.0.0/NeoZen/Theme/Tabs/Tabs-OverflowIndicators.css
@@ -2,6 +2,12 @@
 
 zen-workspace {
   &>arrowscrollbox {
+    margin-bottom: 3px !important;
+  }
+}
+
+zen-workspace {
+  &>arrowscrollbox {
     &[overflowing] {
       &::after {
         content: '';
